k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-deployment
spec:
  replicas: 1
  selector: 
    matchLabels: 
      component: docker-sample
  template:
    metadata:
      labels: 
        component: docker-sample
    spec:
      containers:
        - name: spring-app
          image: robertrichter/docker-demo
          ports: 
            - containerPort: 9091
