k8s/portgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-server
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres-server
  template:
    metadata:
      labels: 
        component: postgres-server
    spec:
      volumes: 
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-persistent-volume-claim
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
