k8s/spring-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      component: spring-app
  template:
    metadata:
      labels:
        component: spring-app
    spec:
      containers:
        - name: spring-app
          image: robertrichter/docker-demo
          ports:
            - containerPort: 9091
